# osso-applet-screencalibration

./: .svnignore  COPYING  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
debian/: changelog  control  copyright  dirs  manpage.1  osso-applet-screencalibration.install  osso-applet-screencalibration.postrm  rules
etc/: Makefile.am  Makefile.in  tscalibrate.desktop
src/: Makefile.am  Makefile.in  calibration.c  calibration.h  calibx.h.in  common.h  config.h  gfx.c  gfx.h  launch.c  main.c  tscalibrate
